frontend/tests/cases/negative/interfaces/parameters/constraintTooFewParameters.gr
interface Simple a b

-- 'Simple' is applied to one parameter, but it
-- needs two
f : forall {a : Type} . {Simple a} => a -> a
f x = x
